--- a/index.html
+++ b/index.html
@@ -731,7 +731,7 @@
                         <br>
                         <p>We'll reach out to you in 30 minutes.</p>
                         <br>
-                        <form action="mail.php" method="post">
+                        <form action="mailto:netnexgroup@gmail.com" method="post">
                             <input type="email" name="email" id="email" required placeholder="reach@netnexglobal.com" class="p-2"> <br><br>
                             <input class="submit-btn" type="submit">
                         </form>
@@ -1189,7 +1189,7 @@
                     <div style="background-color: transparent !important;"
                         class="tab-pane fade form-tab-pane show active" id="pills-speaker" role="tabpanel"
                         aria-labelledby="pills-speaker-tab">
-                        <form action="speaker.php" class="needs-validation p-3 pt-3" method="POST">
+                        <form action="https://formcarry.com/s/G66aOi_ed" class="needs-validation p-3 pt-3" method="POST">
                             <br>
                             <div class="form-row">
                                 <div class="mb-3 form-row-input col-md-6">
