--- a/index.html
+++ b/index.html
@@ -1228,9 +1228,10 @@
                     </div>
                     <div style="background-color: transparent !important;" class="tab-pane fade form-tab-pane"
                         id="pills-sponsor" role="tabpanel" aria-labelledby="pills-sponsor-tab">
-                        <form action="sponsor.php" class="needs-validation p-3 pt-3" method="POST">
+                        <form action="https://api.staticforms.xyz/submit" class="needs-validation p-3 pt-3" method="POST">
                             <br>
                             <div class="form-row">
+                                <input type="hidden" name="accessKey" value="fd8cf8d0-37ca-4c1b-82a6-85ad71ffdc1d">
                                 <div class="mb-3 form-row-input col-md-6">
                                     <label for="name">Name</label>
                                     <input type="text" name="name" class="form-control input bg-transparent" id="name"
