--- a/index.html
+++ b/index.html
@@ -17,18 +17,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 
     <!-- Font Family -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Merienda:wght@300;400;500;600;700;800;900&display=swap"
-        rel="stylesheet">
-
-    <!-- sen -->
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Sen:wght@400;700;800&display=swap" rel="stylesheet"> -->
-
-    <!-- <link href="//db.onlinewebfonts.com/c/4dce222892a5246f030b87b9b626128c?family=Depot+New" rel="stylesheet"
-        type="text/css" /> -->
 
     <!-- expert section -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/assets/owl.carousel.css">
@@ -55,7 +43,7 @@
 
 <body>
     <div>
-        <header class="">
+        <header>
             <div style="position: fixed;top: 0px; width: 100%;z-index: 200;padding:10px;margin-left: 0px !important;margin-right: 0px !important;"
                 class="nav-fixed navigation">
                 <nav class="navbar navbar-expand-lg navbar-light  ">
@@ -72,19 +60,19 @@
                     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                         <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
                             <li class="nav-item pr-2 active">
+                                <a class="nav-link text-white " href="#services">Services</a>
+                            </li>
+                            <li class="nav-item pr-2">
                                 <a class="nav-link text-white " href="#about">About</a>
                             </li>
                             <li class="nav-item pr-2">
-                                <a class="nav-link text-white " href="#topics">Topics</a>
+                                <a class="nav-link text-white " href="#experts">Experts</a>
                             </li>
                             <li class="nav-item pr-2">
-                                <a class="nav-link text-white " href="#speakers">Featured Speakers</a>
-                            </li>
-                            <li class="nav-item pr-2">
-                                <a class="nav-link text-white " href="#partners">Partners</a>
+                                <a class="nav-link text-white " href="#portfolio">Portfolio</a>
                             </li>
                             <li class="nav-item  pt-2">
-                                <a class="registration-btn " href="#contact">REGISTER NOW</a>
+                                <a class="registration-btn " href="#contact">Contact Us</a>
                             </li>
                         </ul>
                     </div>
@@ -129,7 +117,7 @@
                     <br>
                     <br>
                     <div class="d-flex justify-content-center align-items-center flex-wrap">
-                        <p onmouseover="eventvideo()" onmouseout="eventvideoout()" class="events-hoverme">EVENTS</p>
+                        <p onmouseover="eventvideo()" class="events-hoverme">EVENTS</p>
                         <p>|</p>
                         <p onmouseover="video2()" class="digital-hoverme">DIGITAL OUTREACH</p>
                         <p>|</p>
@@ -146,9 +134,6 @@
                 document.getElementsByClassName("video1").style.display = "block";
             }
 
-            function eventvideoout() {
-                document.getElementsByClassName("video1").style.display = "none";
-            }
         </script>
          -->
         <section class="second-section">
@@ -159,7 +144,7 @@
                         <h1 class="count" data-number="100"></h1>
                         <h2>+</h2>
                     </div>
-                    <h3 style="font-family: 'Depot', sans-serif" class="text">Events Completed</h3>
+                    <h3 style="font-family: DepotNew;" class="text">Events Completed</h3>
                 </div>
                 <div class="item">
                     <div class="item-sub-div m-3">
@@ -167,7 +152,7 @@
                         <h1 class="count" data-number="2500"></h1>
                         <h2>+</h2>
                     </div>
-                    <h3 style="font-family:'Depot', sans-serif" class="text">Meetings Delivered</h3>
+                    <h3 style="font-family:DepotNew;" class="text">Meetings Delivered</h3>
                 </div>
                 <div class="item">
                     <div class="item-sub-div m-3">
@@ -175,7 +160,7 @@
                         <h1 class="count" data-number="60"></h1>
                         <h2>+</h2>
                     </div>
-                    <h3 style="font-family: 'Depot', sans-serif" class="text">Clients Serviced</h3>
+                    <h3 style="font-family: DepotNew;" class="text">Clients Serviced</h3>
                 </div>
                 <div class="item">
                     <div class="item-sub-div m-3">
@@ -183,11 +168,12 @@
                         <h1 class="count" data-number="4"></h1>
                         <h2>M+</h2>
                     </div>
-                    <h3 style="font-family: 'Depot', sans-serif" class="text">C Level Contacts</h3>
+                    <h3 style="font-family: DepotNew;" class="text">C Level Contacts</h3>
                 </div>
             </div>
+            <span id="services"><br></span>
         </section>
-        <section class="service-page">
+        <section class="service-page" >
             <center>
                 <h1>Services</h1>
             </center>
@@ -226,7 +212,7 @@
                                     </div>
                                     <div class="modal-body">
                                         <h6>Enhance Your Commercial Functions to Deliver Top and Bottom Line Growth</h6>
-                                        <p style="text-align: justify;font-size: 16px;font-weight: 400;line-height: 26px;max-width: 100%; font-family: 'Depot', sans-serif"
+                                        <p style="text-align: justify;font-size: 16px;font-weight: 400;line-height: 26px;max-width: 100%; font-family: DepotNew ;"
                                             class="mb-30">We help you develop an effective and practical go-to-market
                                             strategy
                                             that’s rooted
@@ -291,7 +277,7 @@
                                     </div>
                                     <div class="modal-body">
                                         <h6>Leads are the Growth Drivers of Your Business</h6>
-                                        <p style="text-align: justify;font-size: 16px;font-weight: 400;line-height: 26px;max-width: 100%; font-family: 'Depot', sans-serif"
+                                        <p style="text-align: justify;font-size: 16px;font-weight: 400;line-height: 26px;max-width: 100%; font-family: DepotNew ;"
                                             class="
                                             mb-30">Generating the right leads interested in, or inclined to your
                                             offerings, not only accelerates your sales cycle multifold, but is also cost
@@ -346,7 +332,7 @@
                                     </div>
                                     <div class="modal-body">
                                         <h6>Personal Interactions Allow to Build & Deepen Existing Relationships</h6>
-                                        <p style="text-align: justify;font-size: 16px;font-weight: 400;line-height: 26px;max-width: 100%; font-family: 'Depot', sans-serif"
+                                        <p style="text-align: justify;font-size: 16px;font-weight: 400;line-height: 26px;max-width: 100%; font-family: DepotNew ;"
                                             class="
                                             mb-30">Events are the gateway to create brand experiences and forge lasting
                                             business relationships; a great opportunity to educate, inspire and connect
@@ -400,7 +386,7 @@
                                     </div>
                                     <div class="modal-body">
                                         <h6>Create Content That Reaches Your Audience's Audience</h6>
-                                        <p style="text-align: justify;font-size: 16px;font-weight: 400;line-height: 26px;max-width: 100%; font-family: 'Depot', sans-serif"
+                                        <p style="text-align: justify;font-size: 16px;font-weight: 400;line-height: 26px;max-width: 100%; font-family: DepotNew ;"
                                             class="
                                             mb-30">Creatives & Content are the most visual elements that will dictate
                                             the overall look and feel of your brand and help to communicate your ideas
@@ -420,7 +406,7 @@
                 </div>
             </div>
         </section>
-        <section class="about-section">
+        <section class="about-section"  id="about">
             <div class="container p-5">
                 <div class="row">
                     <div class="col-12 col-lg-3 col-md-4 mt-2 mb-1">
@@ -437,7 +423,7 @@
             </div>
         </section>
 
-        <section class="experts-section">
+        <section class="experts-section" id="experts">
             <h1>
                 Experts
             </h1>
@@ -689,9 +675,9 @@
             </script>
 
     </div>
+    <span id="portfolio"><br></span>
     </section>
-
-    <section class="portfolio-section">
+    <section class="portfolio-section" >
         <h1>Portfolio</h1>
         <br>
         <div class="portfolio-position">
@@ -731,7 +717,7 @@
                         <br>
                         <p>We'll reach out to you in 30 minutes.</p>
                         <br>
-                        <form action="mailto:netnexgroup@gmail.com" method="post">
+                        <form action="mail.php" method="post">
                             <input type="email" name="email" id="email" required placeholder="reach@netnexglobal.com" class="p-2"> <br><br>
                             <input class="submit-btn" type="submit">
                         </form>
@@ -1189,7 +1175,7 @@
                     <div style="background-color: transparent !important;"
                         class="tab-pane fade form-tab-pane show active" id="pills-speaker" role="tabpanel"
                         aria-labelledby="pills-speaker-tab">
-                        <form action="https://formcarry.com/s/G66aOi_ed" class="needs-validation p-3 pt-3" method="POST">
+                        <form action="" class="needs-validation p-3 pt-3" method="POST">
                             <br>
                             <div class="form-row">
                                 <div class="mb-3 form-row-input col-md-6">
@@ -1530,7 +1516,7 @@
             } else {
                 mybutton.style.display = "none";
             }
-            if (window.scrollY > 30) {
+            if (window.scrollY > 80) {
                 scrollme.classList.add('nav-active');
             } else {
                 scrollme.classList.remove('nav-active');
