--- a/index.html
+++ b/index.html
@@ -1158,19 +1158,19 @@
                         <form action="https://formcarry.com/s/G66aOi_ed" class="needs-validation p-3 pt-3" method="POST">
                             <div class="d-flex justify-content-around align-items-center flex-wrap m-auto">
                                 <div class="m-2">
-                                    <input type="radio" name="location" id="location1" value="SPEAKER" required>
+                                    <input type="radio" name="Association_as" id="location1" value="SPEAKER" required>
                                     <label class="form-check-label" for="location1">
                                         SPEAKER
                                     </label>
                                 </div>
                                 <div class="m-2">
-                                    <input type="radio" name="location" id="location2" value="SPONSOR" required>
+                                    <input type="radio" name="Association_as" id="location2" value="SPONSOR" required>
                                     <label class="form-check-label" for="location2">
                                         SPONSOR
                                     </label>
                                 </div>
                                 <div class="m-2">
-                                    <input type="radio" name="location" id="location3" value="ATTENDEE" required>
+                                    <input type="radio" name="Association_as" id="location3" value="ATTENDEE" required>
                                     <label class="form-check-label" for="location3">
                                         ATTENDEE
                                     </label>
