--- a/index.html
+++ b/index.html
@@ -852,11 +852,11 @@
                                         businesses pushing everyone to adapt their plan and strategies - perhaps for the
                                         long haul.</p>
                                     <br>
-                                    <div class="infocorner-name">Read More</div>
+                                    <a target="_blank" href="https://netnexglobal.com/forseeable-future-of-marketing.html" class="infocorner-name">Read More</a>
                                 </div>
-
                             </div>
                             <!--END OF infocorner 1 -->
+
                             <!--infocorner 2 -->
                             <div class="item">
                                 <div class="shadow-effect">
@@ -868,11 +868,11 @@
                                         for every small and mid-sized businesses.
                                     </p>
                                     <br>
-                                    <div class="infocorner-name">Read More</div>
+                                    <a target="_blank" href="https://netnexglobal.com/making-the-most-of-the-great-reset.html" class="infocorner-name">Read More</a>
                                 </div>
-
                             </div>
                             <!--END OF infocorner 2 -->
+
                             <!--infocorner 3 -->
                             <div class="item">
                                 <div class="shadow-effect">
@@ -883,9 +883,8 @@
                                         space, a new league of non-bank fintechs are making news.
                                     </p>
                                     <br>
-                                    <div class="infocorner-name">Read More</div>
+                                    <a target="_blank" href="https://netnexglobal.com/neobanks-simplified.html" class="infocorner-name">Read More</a>
                                 </div>
-
                             </div>
                             <!--END OF infocorner 3 -->
                             <!--infocorner 4 -->
