--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
                                 <h2 class="profile__name">KAPIL MAHAJAN</h2>
                                 <p>Group CIO</p>
                                 <img class="speaker-pic" alt="Profile shot for Ruby Morris"
-                                    src="/images/speakers/kapil.png" />
+                                    src="./images/speakers/kapil.png" />
                                 <div>
                                     <img class="logo" src="./images/speakers-logos/safeExpress-logo.png" alt="">
                                 </div>
@@ -564,7 +564,7 @@
                                 <h2 class="profile__name">PAWAN SARDA</h2>
                                 <p>Group CMO</p>
                                 <img class="speaker-pic" alt="Profile shot for Ruby Morris"
-                                    src="/images/speakers/Pawan-Sarda-bg.png" />
+                                    src="./images/speakers/Pawan-Sarda-bg.png" />
                                 <div>
                                     <img class="logo" src="./images/speakers-logos/future-group-logo.png" alt="">
                                 </div>
@@ -603,7 +603,7 @@
                                 <h2 class="profile__name">RAMAMOORTHY R</h2>
                                 <p>Finance Director</p>
                                 <img class="speaker-pic" alt="Profile shot for Ruby Morris"
-                                    src="/images/speakers/ram.png" />
+                                    src="./images/speakers/ram.png" />
                                 <div>
                                     <img class="logo" src="./images/speakers-logos/tesco-logo.png" alt="">
                                 </div>
