--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 Your browser does not support the html video tag.
             </video>
             <video class="video2" loop muted autoplay>
-                <source src="./images/header-video2.m4v" type="video/mp4">
+                <source src="./images/header-video2.mp4" type="video/mp4">
                 Your browser does not support the html video tag.
             </video>
             <video class="video3" loop muted autoplay>
