--- a/index.html
+++ b/index.html
@@ -129,6 +129,8 @@
             </section>
             <div class="ball-1"></div>
             <div class="ball-2"></div>
+            <div class="ball-3"></div>
+            <div class="ball-4"></div>
 
             <script type="text/javascript">
                 function eventvideo() {
